# Miriya-Engine

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini  launch.vs.json
Editor/: CMakeLists.txt  imgui.ini
Editor/assets/scenes/: Example.miriya
Editor/assets/shaders/: FlatColor.glsl  Texture.glsl
Editor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.h
Editor/src/Panel/: SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Miriya/: CMakeLists.txt
Miriya/include/: Miriya.h
Miriya/src/: mirpch.h
Miriya/src/Miriya/: Application.cpp  Application.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Miriya/src/Miriya/Core/: Application.cpp  Application.h  Base.h  Core.h  EntryPoint.h  Input.h  Keycode.h  Keycodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCode.h  MouseCodes.h  PlatformDetection.h  Timestep.h  Window.cpp  Window.h
Miriya/src/Miriya/Debug/: Instrumentor.h
Miriya/src/Miriya/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Miriya/src/Miriya/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Miriya/src/Miriya/Renderer/: Buffer.cpp  Buffer.h  Camera.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Miriya/src/Miriya/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Miriya/src/Miriya/Util/: PlatformUtil.h
Miriya/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Miriya/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsPlatformUtil.cpp  WindowsWindow.cpp  WindowsWindow.h
Sandbox/: CMakeLists.txt  Miriya-Profile-Runtime.json  Miriya-Profile-Shutdown.json  Miriya-Profile-Startup.json  imgui.ini
Sandbox/assets/shaders/: Texture.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  ParticleSystem.cpp  ParticleSystem.h  Random.cpp  Random.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
